@@ -1,7 +1,6 @@
 plugins {
     id 'java'
-    id 'io.freefair.aspectj.post-compile-weaving' version "8.11"
-    id 'com.diffplug.spotless' version "7.0.2"
+    id 'com.diffplug.spotless' version "7.0.3"
 }
 
 group 'com.github.ankowals'
@@ -13,29 +12,25 @@ repositories {
 }
 
 dependencies {
-    runtimeOnly("org.aspectj:aspectjrt:1.9.23")
-
-    testAnnotationProcessor("org.projectlombok:lombok:1.18.36")
-
-    testCompileOnly("org.projectlombok:lombok:1.18.36")
-
-    testImplementation("org.junit.jupiter:junit-jupiter:5.13.0-M2")
-    testImplementation("org.junit.platform:junit-platform-launcher:1.13.0-M2")
+    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
+    testCompileOnly("org.projectlombok:lombok:1.18.38")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.13.0-M3")
+    testImplementation("org.junit.platform:junit-platform-launcher:1.13.0-M3")
     testImplementation("org.junit-pioneer:junit-pioneer:2.3.0")
     testImplementation("io.github.glytching:junit-extensions:2.6.0")
-    testImplementation("org.seleniumhq.selenium:selenium-java:4.30.0")
-    testImplementation("io.github.bonigarcia:selenium-jupiter:6.0.0")
+    testImplementation("org.seleniumhq.selenium:selenium-java:4.32.0")
+    testImplementation("io.github.bonigarcia:selenium-jupiter:6.1.1")
     testImplementation("ch.qos.logback:logback-core:1.5.18")
     testImplementation("ch.qos.logback:logback-classic:1.5.18")
     testImplementation("org.slf4j:slf4j-api:2.0.17")
     testImplementation("org.slf4j:jul-to-slf4j:2.0.17")
     testImplementation("org.apache.commons:commons-lang3:3.17.0")
-    testImplementation("org.aspectj:aspectjweaver:1.9.23")
     testImplementation("org.assertj:assertj-core:4.0.0-M1")
+    testImplementation("org.aspectj:aspectjweaver:1.9.24")
     testImplementation("org.hamcrest:hamcrest:3.0")
-    testImplementation("org.jsoup:jsoup:1.19.1")
+    testImplementation("org.jsoup:jsoup:1.20.1")
     testImplementation("com.aventstack:extentreports:5.1.2")
-    testImplementation("org.testcontainers:selenium:1.20.6")
+    testImplementation("org.testcontainers:selenium:1.21.0")
     testImplementation("com.github.romankh3:image-comparison:4.4.0")
     testImplementation("com.deque.html.axe-core:selenium:4.10.1")
 }
@@ -46,12 +41,19 @@ test {
 
     //set env variables
     environment "WDM_DOCKERENABLERECORDING", "true"
-    environment "WDM_CHROMEVERSION", "133.0"
-    environment "ENABLE_BROWSER_IN_DOCKER_CONTAINER", "true"
+    //environment "WDM_CHROMEVERSION", "133.0"
+    //environment "ENABLE_BROWSER_IN_DOCKER_CONTAINER", "true"
     //environment "VISUAL_ASSERTIONS_ENABLED", "true"
     //environment "VISUAL_ASSERTIONS_REPLACE_SCREENSHOTS", "true"
+    environment "ACCESSIBILITY_ASSERTIONS_ENABLED", "true"
 
     useJUnitPlatform()
+
+    doFirst {
+        def weaver = configurations.testRuntimeClasspath.find { it.name.contains("aspectjweaver") }
+        jvmArgs += "-javaagent:$weaver"
+        jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
+    }
 }
 
 spotless {
